syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "user/v1/apitoken.proto";

option go_package = "xcoding/gen/go/user/v1;userv1";

// UserService 提供用户管理操作
service UserService {
  // 注册新用户
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/user_service/api/v1/users/register"
      body: "*"
    };
  }
  
  // 用户登录
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/user_service/api/v1/users/login"
      body: "*"
    };
  }
  
  // 获取用户信息
  // - 普通用户：只能获取自己的资料
  // - 管理员：可以通过提供user_id获取任何用户的资料
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/user_service/api/v1/users/{user_id}"
    };
  }
  
  // 更新用户信息
  // - 普通用户：只能更新自己的资料
  // - 管理员：可以通过提供user_id更新任何用户的资料
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      put: "/user_service/api/v1/users/{user_id}"
      body: "*"
    };
  }
  
  // 列出用户
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/user_service/api/v1/users"
    };
  }
  
  // 根据ID删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/user_service/api/v1/users/{id}"
    };
  }
  
  // 认证接口 - 用于APISIX forward-auth插件验证用户令牌
  // 支持用户登录令牌和API令牌的验证，并提供详细的权限信息
  rpc Auth(AuthRequest) returns (AuthResponse) {
    option (google.api.http) = {
      get: "/user_service/api/v1/auth"
    };
  }
  
  // 创建API令牌
  rpc CreateAPIToken(CreateAPITokenRequest) returns (CreateAPITokenResponse) {
    option (google.api.http) = {
      post: "/user_service/api/v1/tokens"
      body: "*"
    };
  }
  
  // 列出API令牌
  rpc ListAPITokens(ListAPITokensRequest) returns (ListAPITokensResponse) {
    option (google.api.http) = {
      get: "/user_service/api/v1/tokens"
    };
  }
  
  // 删除API令牌
  rpc DeleteAPIToken(DeleteAPITokenRequest) returns (DeleteAPITokenResponse) {
    option (google.api.http) = {
      delete: "/user_service/api/v1/tokens/{token_id}"
    };
  }
}

// 用户角色枚举
enum UserRole {
  USER_ROLE_USER = 0;
  USER_ROLE_SUPER_ADMIN = 1;
}

// 令牌类型枚举
enum TokenType {
  TOKEN_TYPE_UNSPECIFIED = 0;
  TOKEN_TYPE_USER = 1;      // 用户登录令牌
  TOKEN_TYPE_API = 2;       // API访问令牌
}

// 用户消息
message User {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  string avatar = 4;
  UserRole role = 5;
  bool is_active = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// 注册请求
message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

// 注册响应
message RegisterResponse {
  User user = 1;
  string token = 2;
}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  User user = 1;
  string token = 2;
}

// 获取用户请求
message GetUserRequest {
  // 如果不提供user_id，则获取当前登录用户的资料
  // 如果提供user_id，则需要管理员权限才能获取指定用户的资料
  uint64 user_id = 1;
}

// 获取用户响应
message GetUserResponse {
  User user = 1;
}

// 更新用户请求
message UpdateUserRequest {
  // 如果不提供user_id，则更新当前登录用户的资料
  // 如果提供user_id，则需要管理员权限才能更新指定用户的资料
  uint64 user_id = 1;
  
  // 可更新的字段
  // 注意：普通用户不能修改自己的角色和状态，这些字段只有管理员可以修改
  string username = 2;
  string email = 3;
  string avatar = 4;
  UserRole role = 5;
  bool is_active = 6;
}

// 更新用户响应
message UpdateUserResponse {
  User user = 1;
}

// 列出用户请求
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
}

// 列出用户响应
message ListUsersResponse {
  message Pagination {
    int32 page = 1;
    int32 page_size = 2;
    int32 total_items = 3;
    int32 total_pages = 4;
  }
  repeated User data = 1;
  Pagination pagination = 2;
}

// 删除用户请求
message DeleteUserRequest {
  uint64 id = 1;
}

// 删除用户响应
message DeleteUserResponse {
  bool success = 1;
}

// 认证请求
message AuthRequest {
  // 令牌值
  string token = 1;
  
  // 令牌类型（可选，用于区分用户令牌和API令牌）
  TokenType token_type = 2;
  
  // 请求的HTTP方法
  string http_method = 3;
  
  // 请求的路径
  string request_path = 4;
  
  // 客户端IP地址
  string client_ip = 5;
  
  // User-Agent（可选）
  string user_agent = 6;
}

// 认证响应
message AuthResponse {
  // 认证是否成功
  bool authenticated = 1;
  
  // 用户信息（认证成功时返回）
  User user = 2;
  
  // 拒绝原因（认证失败时返回）
  string reason = 3;
  
  // 权限范围（API令牌认证时返回）
  repeated Scope scopes = 4;
  
  // 额外的HTTP头（可以传递给后端服务）
  map<string, string> headers = 5;
  
  // 令牌过期时间
  google.protobuf.Timestamp expires_at = 6;
}